# ai-chat-bot

./: .gitignore  README.md  pyproject.toml  requirements.txt
src/ai_chat_bot/: __main__.py
src/ai_chat_bot/adapters/telegram/: bot.py
src/ai_chat_bot/app/: graph.py  prompting.py
src/ai_chat_bot/core/: config.py
src/ai_chat_bot/infra/db/: sqlite.py
src/ai_chat_bot/infra/llm/: client_factory.py  ollama_client.py  openai_compat_client.py
src/ai_chat_bot/infra/logging/: setup.py
